# benchmark-systems

./: .gitignore  CITATION.cff  README.md  pyproject.toml
examples/: simulations.ipynb  simulations_animations.ipynb  simulations_symbolic.ipynb
src/benchmark_systems/: __init__.py  common.py
src/benchmark_systems/animations/: __init__.py
src/benchmark_systems/models/: __init__.py  common.py  daes.py  odes.py
src/benchmark_systems/state_spaces/: common.py  daes.py  odes.py
src/benchmark_systems/symbolic/: __init__.py  daes.py  integrate.py  odes.py
tests/: simulations.ipynb
