[project]
name = "benchmark-systems"
version = "0.5.0"
description = "Open collection of model predictive control (MPC) benchmarking problems"
authors = [
    {name = "Guzmán", email = "ggonzm@unileon.es"},
]
dependencies = ["scipy>=1.14.1", "scipy-dae>=0.0.6"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true



[dependency-groups]
dev = [
    "matplotlib>=3.10.0",
]
