[project]
name = "benchmark-systems"
version = "1.0.4"
description = "Open collection of model predictive control (MPC) benchmarking problems"
authors = [
    {name = "Guzmán", email = "ggonzm@unileon.es"},
]
dependencies = ["scipy>=1.14.1", "solve-dae>=0.2.3"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
anim = [
    "matplotlib>=3.10.9",
]
sym = [
    "casadi>=3.7.2",
]
all = [
    "benchmark-systems[sym, anim]",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true




[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "control>=0.10.2",
]
